RESOLVED FIXED303875
[blocks-in-inline] Crash when visiting amazon.com product page
https://bugs.webkit.org/show_bug.cgi?id=303875
Summary [blocks-in-inline] Crash when visiting amazon.com product page
alan
Reported 2025-12-09 13:30:27 PST
Attachments
Patch (11.16 KB, patch)
2025-12-09 14:00 PST, alan
no flags
Patch (11.61 KB, patch)
2025-12-09 17:31 PST, alan
no flags
[fast-cq]Patch (11.84 KB, patch)
2025-12-10 06:47 PST, alan
no flags
alan
Comment 1 2025-12-09 14:00:55 PST
alan
Comment 2 2025-12-09 17:31:01 PST
alan
Comment 3 2025-12-10 06:47:09 PST
Created attachment 477685 [details] [fast-cq]Patch
EWS
Comment 4 2025-12-10 08:04:21 PST
Committed 304230@main (3e83f90e9fae): <https://commits.webkit.org/304230@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477685 [details].
Note You need to log in before you can comment on or make changes to this bug.